--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Webpack-tutorial",
+  "name": "One hour ago",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,7 +11,7 @@
   },
   "homepage": "https://Velmor99.github.io/[your_repo]",
   "keywords": [],
-  "author": "",
+  "author": "Lee Roman",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.12.13",
@@ -45,5 +45,8 @@
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.7.3",
     "webpackbar": "^5.0.0-3"
+  },
+  "dependencies": {
+    "react-responsive": "^9.0.0-beta.6"
   }
 }
